Added multiplayer code to singleplayer code (does not work)

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
       background-size: 100% 100%;
     }
   </style>
+  <script src="https://cdn.jsdelivr.net/npm/p5.party@latest/dist/p5.party.js"></script>
   <script src="script.js"></script>
 </body>
 
