--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
   <title>Calamdle</title>
-  <link href="style.css" rel="stylesheet" type="text/css" />
+  <link rel="stylesheet" href="style.css">
   <script src="https://cdn.jsdelivr.net/npm/p5@1.6.0/lib/p5.js"></script>
   <script src="p5.clickable.js">
   </script>
@@ -21,7 +21,6 @@
       background-size: 100% 100%;
     }
   </style>
-  <script src="https://cdn.jsdelivr.net/npm/p5.party@latest/dist/p5.party.js"></script>
   <script src="script.js"></script>
 </body>
 
